--- a/main.html
+++ b/main.html
@@ -15,8 +15,25 @@
 		<!-- Base CSS -->
 		<link rel="stylesheet" href="public/base.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="public/font-awesome-4.6.3/css/font-awesome.min.css">
+
 		<!-- JQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
+
+  <section id="navbar">
+    <div class="collapse navbar-collapse" id="main-nav">
+      <ul class="nav navbar-nav">
+        <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+        <li><a href="/aboutme"><i class="fa fa-user" aria-hidden="true"></i>&nbsp; About Me</a></li>
+        <li><a href="/education"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp; Education</a></li>
+        <li><a href="/resume"><i class="fa fa-file-text" aria-hidden="true"></i>
+      </ul>
+  </section>
+
+  <section id="main">
+
+  </section>
 
 </html>
