Finished navbar, for now

--- a/main.html
+++ b/main.html
@@ -25,10 +25,11 @@
   <section id="navbar">
     <div class="collapse navbar-collapse" id="main-nav">
       <ul class="nav navbar-nav">
-        <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+        <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>&nbsp; Home</a></li>
         <li><a href="/aboutme"><i class="fa fa-user" aria-hidden="true"></i>&nbsp; About Me</a></li>
         <li><a href="/education"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp; Education</a></li>
-        <li><a href="/resume"><i class="fa fa-file-text" aria-hidden="true"></i>
+        <li><a href="/resume"><i class="fa fa-file-text" aria-hidden="true"></i>&nbsp; Resume</a></li>
+        <li><a href="/contact"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp; Contact</a></li>
       </ul>
   </section>
 
