Icons for external links

--- a/main.html
+++ b/main.html
@@ -34,7 +34,38 @@
   </section>
 
   <section id="main">
+    <div class="row">
+      <div class="col-md-3 col-md-offset-8">
+        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br></h1>
+        <div class="icons">
+          <a href="https://github.com/kylesturmer"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i>
+          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <i class="fa fa-arrow-down fa-3x" aria-hidden="true"></i>
+    </div>
+  </section>
 
+  <section id="aboutme">
+    <a name="aboutme">
+
+  </section>
+
+  <section id="education">
+    <a name="education">
+
+  </section>
+
+  <section id="resume">
+    <a name="resume">
+
+  </section>
+
+  <section id="contact">
+    <a name="contact">
+    
   </section>
 
 </html>
