Added in some placeholder data

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
         <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>&nbsp; Home</a></li>
         <li><a href="/aboutme"><i class="fa fa-user" aria-hidden="true"></i>&nbsp; About Me</a></li>
         <li><a href="/education"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp; Education</a></li>
-        <li><a href="/resume"><i class="fa fa-file-text" aria-hidden="true"></i>&nbsp; Resume</a></li>
+        <li><a href="/experience"><i class="fa fa-laptop" aria-hidden="true"></i>&nbsp; Experience</a></li>
         <li><a href="/contact"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp; Contact</a></li>
       </ul>
   </section>
@@ -36,10 +36,11 @@
   <section id="main">
     <div class="row">
       <div class="col-md-3 col-md-offset-8">
-        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br></h1>
+        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
         <div class="icons">
-          <a href="https://github.com/kylesturmer"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i>
-          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i>
+          <a href=""><i class="fa fa-file-text fa-3x" aria-hidden="true">&nbsp;</a></i>
+          <a href="https://github.com/kylesturmer"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</a></i>
+          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a></i>
         </div>
       </div>
     </div>
@@ -58,14 +59,26 @@
 
   </section>
 
-  <section id="resume">
-    <a name="resume">
-
+  <section id="experience">
+    <a name="experience">
+    <p>Building software applications in Meteor’s full-stack
+       JavaScript platform independently and in teams, completing
+       and deploying a working software application for a local startup venture,
+       Thrivio. Development work (which spanned the software development lifecycle SDLC)
+       was supplemented by targeted training in Agile process, full-stack programming, UI/UX,
+       technical communication, and DevOps.</p>
+    <p>Currently enrolled at CCSU as a junior in the honors CS department. I enjoy taking
+       part in the CS club on campus. Although I have only been coding for a little over 2 years,
+       I have a growing passion for the challenge.</p><br></br>
+		<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
+       in my data structures class. My partner and I used this algorithm to calculate the fasest route for
+       different planes to travel to different airports throughout the country.  The last project was in my
+       Artificial Intelligence class this past semester, where I studied Affective Computing</p>
   </section>
 
   <section id="contact">
     <a name="contact">
-    
+
   </section>
 
 </html>
