--- a/main.html
+++ b/main.html
@@ -25,11 +25,11 @@
   <section id="navbar">
     <div class="collapse navbar-collapse" id="main-nav">
       <ul class="nav navbar-nav">
-        <li><a href="/"><i class="fa fa-home" aria-hidden="true"></i>&nbsp; Home</a></li>
-        <li><a href="/aboutme"><i class="fa fa-user" aria-hidden="true"></i>&nbsp; About Me</a></li>
-        <li><a href="/education"><i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp; Education</a></li>
-        <li><a href="/experience"><i class="fa fa-laptop" aria-hidden="true"></i>&nbsp; Experience</a></li>
-        <li><a href="/contact"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp; Contact</a></li>
+        <li><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
+        <li><a href="/aboutme"><i class="fa fa-user fa-lg" aria-hidden="true"></i>&nbsp; About Me</a></li>
+        <li><a href="/education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
+        <li><a href="/experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
+        <li><a href="/contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
       </ul>
   </section>
 
