Comment out aboutme

--- a/main.html
+++ b/main.html
@@ -49,9 +49,11 @@
     </div>
   </section>
 
-  <section id="aboutme">
-    <a name="aboutme">
-
+  <!-- <section id="aboutme">
+		<p>Currently enrolled at CCSU as a junior in the honors CS department. I enjoy taking
+			 part in the CS club on campus. Although I have only been coding for a little over 2 years,
+			 I have a growing passion for the challenge.</p>
+    <a name="aboutme"> -->
   </section>
 
   <section id="education">
@@ -67,9 +69,6 @@
        Thrivio. Development work (which spanned the software development lifecycle SDLC)
        was supplemented by targeted training in Agile process, full-stack programming, UI/UX,
        technical communication, and DevOps.</p>
-    <p>Currently enrolled at CCSU as a junior in the honors CS department. I enjoy taking
-       part in the CS club on campus. Although I have only been coding for a little over 2 years,
-       I have a growing passion for the challenge.</p><br></br>
 		<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
        in my data structures class. My partner and I used this algorithm to calculate the fasest route for
        different planes to travel to different airports throughout the country.  The last project was in my
