Added certification badge

--- a/main.html
+++ b/main.html
@@ -36,6 +36,7 @@
   <section id="main">
     <div class="row">
       <div class="col-md-3 col-md-offset-8">
+				<img src="http://i64.tinypic.com/2uh0siu.png" alt="A100 Certification">
         <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
         <div class="icons">
           <a href=""><i class="fa fa-file-text fa-3x" aria-hidden="true">&nbsp;</a></i>
