--- a/main.html
+++ b/main.html
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse" id="main-nav">
       <ul class="nav navbar-nav">
         <li><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
-        <li><a href="/aboutme"><i class="fa fa-user fa-lg" aria-hidden="true"></i>&nbsp; About Me</a></li>
-        <li><a href="/education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
-        <li><a href="/experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
-        <li><a href="/contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
+        <li><a href="#aboutme"><i class="fa fa-user fa-lg" aria-hidden="true"></i>&nbsp; About Me</a></li>
+        <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
+        <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
+        <li><a href="#contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
       </ul>
   </section>
 
@@ -64,16 +64,22 @@
 
   <section id="experience">
     <a name="experience">
-    <p>Building software applications in Meteor’s full-stack
-       JavaScript platform independently and in teams, completing
-       and deploying a working software application for a local startup venture,
-       Thrivio. Development work (which spanned the software development lifecycle SDLC)
-       was supplemented by targeted training in Agile process, full-stack programming, UI/UX,
-       technical communication, and DevOps.</p>
-		<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
-       in my data structures class. My partner and I used this algorithm to calculate the fasest route for
-       different planes to travel to different airports throughout the country.  The last project was in my
-       Artificial Intelligence class this past semester, where I studied Affective Computing</p>
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center">
+					<h1>A100 Software Developer Apprentince</h1><br>
+    			<p>Building software applications in Meteor’s full-stack
+       		JavaScript platform independently and in teams, completing
+       		and deploying a working software application for a local startup venture,
+       		Thrivio. Development work (which spanned the software development lifecycle SDLC)
+       		was supplemented by targeted training in Agile process, full-stack programming, UI/UX,
+       		technical communication, and DevOps.</p><br>
+					<h1>University Projects</h1><br>
+					<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
+       		in my data structures class. My partner and I used this algorithm to calculate the fasest route for
+       		different planes to travel to different airports throughout the country.  The last project was in my
+       		Artificial Intelligence class this past semester, where I studied Affective Computing.</p>
+				</div>
+			</div>
   </section>
 
   <section id="contact">
