--- a/main.html
+++ b/main.html
@@ -26,9 +26,9 @@
     <div class="collapse navbar-collapse" id="main-nav">
       <ul class="nav navbar-nav">
         <li><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
-        <li><a href="#aboutme"><i class="fa fa-user fa-lg" aria-hidden="true"></i>&nbsp; About Me</a></li>
         <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
         <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
+				<li><a href="#skills"><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>&nbsp; Skills</a></li>
         <li><a href="#contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
       </ul>
   </section>
@@ -50,16 +50,18 @@
     </div>
   </section>
 
-  <!-- <section id="aboutme">
-		<p>Currently enrolled at CCSU as a junior in the honors CS department. I enjoy taking
-			 part in the CS club on campus. Although I have only been coding for a little over 2 years,
-			 I have a growing passion for the challenge.</p>
-    <a name="aboutme"> -->
-  </section>
-
   <section id="education">
     <a name="education">
-
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center">
+					<h1>Education</h1>
+					<br></br>
+					<p><b>East Hampton High School</b><br><br>Graduated June 2014<br><br>
+					<b>Central Connecticuted State University</b><br><br>
+					Expected to graduate May 2018 with bachelors in computer science<br><br><b>A100</b><br><br>
+					Software developing, expected to finish summer 2016</p>
+				</div>
+			</div>
   </section>
 
   <section id="experience">
