Added JS file. Playing around with js button. Put on hold for now

--- a/main.html
+++ b/main.html
@@ -18,40 +18,43 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="public/font-awesome-4.6.3/css/font-awesome.min.css">
 
+		<!-- Base JS -->
+		<script src="public.base.js"></script>
+
 		<!-- JQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
 
-  <section id="navbar">
-    <div class="collapse navbar-collapse" id="main-nav">
-      <ul class="nav navbar-nav">
-        <li><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
-        <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
-        <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
-				<li><a href="#skills"><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>&nbsp; Skills</a></li>
-        <li><a href="#contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
-      </ul>
-  </section>
+	<body>
+	  <section id="navbar">
+	    <div class="collapse navbar-collapse" id="main-nav">
+	      <ul class="nav navbar-nav">
+	        <li><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
+	        <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
+	        <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
+					<li><a href="#skills"><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>&nbsp; Skills</a></li>
+	        <li><a href="#contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
+	      </ul>
+	  </section>
 
-  <section id="main">
-    <div class="row">
-      <div class="col-md-3 col-md-offset-8">
-				<img src="http://i64.tinypic.com/2uh0siu.png" alt="A100 Certification">
-        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
-        <div class="icons">
-          <a href=""><i class="fa fa-file-text fa-3x" aria-hidden="true">&nbsp;</a></i>
-          <a href="https://github.com/kylesturmer"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</a></i>
-          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a></i>
-        </div>
-      </div>
-    </div>
-    <div class="footer">
-      <i class="fa fa-arrow-down fa-3x" aria-hidden="true"></i>
-    </div>
-  </section>
+	  <section id="main">
+	    <div class="row">
+	      <div class="col-md-3 col-md-offset-8">
+					<img src="http://i64.tinypic.com/2uh0siu.png" alt="A100 Certification">
+	        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
+	        <div class="icons">
+	          <a href=""><i class="fa fa-file-text fa-3x" aria-hidden="true">&nbsp;</a></i>
+	          <a href="https://github.com/kylesturmer"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</a></i>
+	          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a></i>
+	        </div>
+	      </div>
+	    </div>
+	    <!-- <div class="footer">
+	      <i class="btn fa fa-arrow-down fa-3x" aria-hidden="true"></i></a>
+	    </div> -->
+	  </section>
 
-  <section id="education">
-    <a name="education">
+	  <section id="education">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<h1>Education</h1>
@@ -62,31 +65,63 @@
 					Software developing, expected to finish summer 2016</p>
 				</div>
 			</div>
-  </section>
+	  </section>
 
-  <section id="experience">
-    <a name="experience">
+	  <section id="experience">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<h1>A100 Software Developer Apprentince</h1><br>
-    			<p>Building software applications in Meteor’s full-stack
-       		JavaScript platform independently and in teams, completing
-       		and deploying a working software application for a local startup venture,
-       		Thrivio. Development work (which spanned the software development lifecycle SDLC)
-       		was supplemented by targeted training in Agile process, full-stack programming, UI/UX,
-       		technical communication, and DevOps.</p><br>
-					<h1>University Projects</h1><br>
-					<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
-       		in my data structures class. My partner and I used this algorithm to calculate the fasest route for
-       		different planes to travel to different airports throughout the country.  The last project was in my
-       		Artificial Intelligence class this past semester, where I studied Affective Computing.</p>
+	    		<p>Building software applications in Meteor’s full-stack
+	       		JavaScript platform independently and in teams, completing
+	       		and deploying a working software application for a local startup venture,
+	       		Thrivio. Development work (which spanned the software development lifecycle SDLC)
+	       		was supplemented by targeted training in Agile process, full-stack programming, UI/UX,
+	       		technical communication, and DevOps.</p><br>
+						<h1>University Projects</h1><br>
+						<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
+	       		in my data structures class. My partner and I used this algorithm to calculate the fasest route for
+	       		different planes to travel to different airports throughout the country.  The last project was in my
+	       		Artificial Intelligence class this past semester, where I studied Affective Computing.</p>
 				</div>
 			</div>
-  </section>
+	  </section>
 
-  <section id="contact">
-    <a name="contact">
+		<section id="skills">
+			<div class="row row-padded">
+				<div class="col-md-4 text-center">
+					<h2>Languages</h2>
+					<ul class="list-group">
+						<li class="list-group-item">Java - Eclipse</li>
+						<li class="list-group-item">C - Visual Studio</li>
+						<li class="list-group-item">MIPS Assembly</li>
+						<li class="list-group-item">Intro to JavaScript, HTML, CSS</li>
+					</ul>
+				</div>
+				<div class="col-md-4 text-center">
+					<h2>Soft Skills</h2>
+					<ul class ="list-group">
+						<li class="list-group-item">Fast learner</li>
+						<li class="list-group-item">Dedicated</li>
+						<li class="list-group-item">Personable</li>
+						<li class="list-group-item">Dependable</li>
+					</ul>
+				</div>
+				<div class="col-md-4 text-center">
+					<h2>Classes</h2>
+					<ul class ="list-group">
+						<li class="list-group-item">Discrete Math</li>
+						<li class="list-group-item">Calculus 2</li>
+						<li class="list-group-item">Artificial Intelligence</li>
+						<li class="list-group-item">Data Structures</li>
+						<li class="list-group-item">Computer Assembly</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 
-  </section>
+	  <section id="contact">
+	    <a name="contact">
 
+	  </section>
+	</body>
 </html>
