Centered divs. Added background color to main

--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 
 	  <section id="main">
 	    <div class="row">
-	      <div class="col-md-3 col-md-offset-8">
+	      <div class="col-md-3 col-md-offset-8" id="main-color">
 					<img src="http://i64.tinypic.com/2uh0siu.png" alt="A100 Certification">
 	        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
 	        <div class="icons">
@@ -59,10 +59,10 @@
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<h1>Education</h1>
 					<br></br>
-					<p><b>East Hampton High School</b><br><br>Graduated June 2014<br><br>
-					<b>Central Connecticuted State University</b><br><br>
-					Expected to graduate May 2018 with bachelors in computer science<br><br><b>A100</b><br><br>
-					Software developing, expected to finish summer 2016</p>
+					<p><b>East Hampton High School</b><br>Graduated June 2014<br><br>
+					<b>Central Connecticuted State University</b><br>
+					Expected to graduate May 2018 with bachelors in computer science<br><br><b>A100</b><br>
+					Software developing<br>Graduated September 2016</p>
 				</div>
 			</div>
 	  </section>
