--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 	  <section id="navbar">
 	    <div class="collapse navbar-collapse" id="main-nav">
 	      <ul class="nav navbar-nav">
-	        <li><a href="/"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
+	        <li><a href="#"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
 	        <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
 	        <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
 					<li><a href="#skills"><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>&nbsp; Skills</a></li>
@@ -81,7 +81,8 @@
 						<p>I have worked on 2 major projects so far in my studies. The first being Dijkstra's algorithm
 	       		in my data structures class. My partner and I used this algorithm to calculate the fasest route for
 	       		different planes to travel to different airports throughout the country.  The last project was in my
-	       		Artificial Intelligence class this past semester, where I studied Affective Computing.</p>
+	       		Artificial Intelligence class this past semester, where I studied Affective Computing.
+						<br><br>Links to these projects can be found on my github account.</p>
 				</div>
 			</div>
 	  </section>
