--- a/main.html
+++ b/main.html
@@ -29,16 +29,16 @@
 	  <section id="navbar">
 	    <div class="collapse navbar-collapse" id="main-nav">
 	      <ul class="nav navbar-nav">
-	        <li><a href="#"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
+	        <li><a href="#intro"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
 	        <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
 	        <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
 					<li><a href="#skills"><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>&nbsp; Skills</a></li>
 	        <li><a href="#contact"><i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>&nbsp; Contact</a></li>
 	      </ul>
+			</div>
 	  </section>
 
-	  <section id="main">
-	    <div class="row">
+	  <section id="intro">
 	      <div class="col-md-3 col-md-offset-8" id="main-color">
 					<img src="http://i64.tinypic.com/2uh0siu.png" alt="A100 Certification">
 	        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
@@ -48,10 +48,9 @@
 	          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a></i>
 	        </div>
 	      </div>
-	    </div>
-	    <!-- <div class="footer">
-	      <i class="btn fa fa-arrow-down fa-3x" aria-hidden="true"></i></a>
-	    </div> -->
+				<!-- <div class="footer">
+	      	<i class="btn fa fa-arrow-down fa-3x" aria-hidden="true"></i></a>
+	    	</div> -->
 	  </section>
 
 	  <section id="education">
