--- a/main.html
+++ b/main.html
@@ -27,9 +27,9 @@
 
 	<body>
 	  <section id="navbar">
-	    <div class="collapse navbar-collapse" id="main-nav">
+	    <div class="collapse navbar-collapse">
 	      <ul class="nav navbar-nav">
-	        <li><a href="#intro"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
+	        <li><a href="#"><i class="fa fa-home fa-lg" aria-hidden="true"></i>&nbsp; Home</a></li>
 	        <li><a href="#education"><i class="fa fa-graduation-cap fa-lg" aria-hidden="true"></i>&nbsp; Education</a></li>
 	        <li><a href="#experience"><i class="fa fa-laptop fa-lg" aria-hidden="true"></i>&nbsp; Experience</a></li>
 					<li><a href="#skills"><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>&nbsp; Skills</a></li>
