--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
 						<li class="list-group-item">Java - Eclipse</li>
 						<li class="list-group-item">C - Visual Studio</li>
 						<li class="list-group-item">MIPS Assembly</li>
-						<li class="list-group-item">Intro to JavaScript, HTML, CSS</li>
+						<li class="list-group-item">JavaScript, HTML, CSS</li>
 					</ul>
 				</div>
 				<div class="col-md-4 text-center">
@@ -109,11 +109,14 @@
 				<div class="col-md-4 text-center">
 					<h2>Classes</h2>
 					<ul class ="list-group">
+						<li class="list-group=item">Web Programming</li>
 						<li class="list-group-item">Discrete Math</li>
 						<li class="list-group-item">Calculus 2</li>
+						<li class="list-group-item">Linear Algebra</li>
 						<li class="list-group-item">Artificial Intelligence</li>
 						<li class="list-group-item">Data Structures</li>
 						<li class="list-group-item">Computer Assembly</li>
+						<li class="list-group-item">Digital System Design</li>
 					</ul>
 				</div>
 			</div>
