--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
 			</div>
 	  </section>
 
-		<!-- <section id="skills">
+		<section id="skills">
 			<div class="row row-padded">
 				<div class="col-md-4 text-center">
 					<h2>Languages</h2>
@@ -121,31 +121,7 @@
 					</ul>
 				</div>
 			</div>
-		</section> -->
-
-		<div class="skills" id="skills">
-			<div class="container">
-				<div class="row">
-				<div class="col-lg-3">
-					<h3>Skills</h3>
-				</div>
-					<div class="col-lg-4">
-						<ul>
-							<li>HTML/CSS<span class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></li>
-							<li>Javascript<span class="stars"><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></li>
-							<li>Java<span class="stars"><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></li>
-						</ul>
-					</div>
-
-					<div class="col-lg-4">
-						<ul>
-							<li>C<span class="stars"><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></li>
-							<li>Assembly (MIPS)<span class="stars"><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></span></li>
-							<li>LISP<span class="stars"><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i>
-						</ul>
-					</div>
-				</div><hr>
-			</div>
+		</section>
 
 	  <section id="contact">
 	    <a name="contact">
