Added resume pdf

--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 					<img src="http://i64.tinypic.com/2uh0siu.png" alt="A100 Certification">
 	        <h1>Hello, I'm Kyle Sturmer<br><br>Website Designer and Developer<br><br></h1>
 	        <div class="icons">
-	          <a href=""><i class="fa fa-file-text fa-3x" aria-hidden="true">&nbsp;</a></i>
+	          <a href="public/KyleSturmer-Resume.pdf"><i class="fa fa-file-text fa-3x" aria-hidden="true">&nbsp;</a></i>
 	          <a href="https://github.com/kylesturmer"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</a></i>
 	          <a href="https://www.linkedin.com/in/kyle-sturmer-78861a126?trk=hp-identity-name"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></a></i>
 	        </div>
